--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Skills</h1>
             <p>I have completed my full stack python developer with reactjs. In full stack python developer i have learn about python version(3.11.4), HTML5, CSS3, Django, Javascript and Reactjs .</p>
             <ul>
-                <li><img src="python.png" height="150" width="250"/></li>
+                <li><img src="Python.png" height="150" width="250"/></li>
                 <li><img src="html.png" height="150" width="250"/></li>
                 <li><img src="css.jpg" height="150" width="250"/></li>
                 <li><img src="django.png" height="150" width="250"/></li>
